# kinematics_computation

./: LICENSE  README.md  pyproject.toml
src/kinematics_computation/examples/forward/: acceleration_2d_3.py  acceleration_3d_3.py  position.py  position_3d_6.py  velocity.py  velocity_2d_3.py  velocity_3d_3.py
src/kinematics_computation/examples/inverse/: acceleration_2d_3.py  acceleration_3d_3.py  acceleration_3d_6.py  velocity.py  velocity_2d_3.py  velocity_3d_3.py  velocity_3d_6.py
src/kinematics_computation/kinematics/three/: frame.py  quaternion.py  vector.py
src/kinematics_computation/kinematics/two/: frame.py  rotation.py  vector.py
