[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kinematics_computation"
version = "0.0.1"
authors = [
    { name = "Leonid (Hara Red) Prokhorenko", email = "rtc6fg4.fejg2@gmail.com" },
    { name = "Tatiana Naumchik", email = "tatiananaumchik10@gmail.com" },
]
description = "Kinematics computation demo"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

dependencies = ["mpmath==1.3.0", "sympy==1.13.3", "numpy==2.2.3"]
